[metadata]
name = rpmatch
description = Python implementation of rpmatch(3) libc function
author = Denis Ollier
license = GPL-3.0-or-later
version = 1.0.0
classifiers =
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: OS Independent
  Programming Language :: Python
  Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = rpmatch
python_requires = >=2.3

# vi: set ft=cfg et sw=2 ts=2:
